--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
         <div class="modal__window">
             <button type="button" class="modal__close" data-modal-close>
                 <svg class="modal__window-icon" width="31" height="31">
-                    <use href="./images/symbol-defs close.svg#icon-close"></use>
+                    <use href="./images/symbol-defs icon close.svg#icon-close-black-18dp-2-1"></use>
                 </svg>
             </button>
             <p class="modal__title ">Оставьте свои данные, мы вам перезвоним</p>
